# JIRA_SS_PROGRESS_PACKAGE

./: .env.example  .make.md  Makefile  README.md  pyproject.toml
jira_ss_progress/: __init__.py  cli.py  config.py  jira_utils.py  smartsheet_utils.py  sync.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_config.py  test_jira_utils.py  test_smartsheet_utils.py  test_sync.py
